# distributed-programming

./: .gitignore
authentication-server/: CMakeLists.txt  main.cpp
authentication-server/enums/: UserType.h
authentication-server/structs/: JsonMessage.h  StatusResponse.h  User.h
authentication-server/utilities/: HashUtils.cpp  HashUtils.h  JsonHelper.cpp  JsonHelper.h
game-server/: AuthServerClient.cpp  AuthServerClient.h  CMakeLists.txt  main.cpp
game-server/enums/: PlayerType.h
game-server/structs/: ConnectionInfo.h  Item.h  JsonMessage.h  Player.h  StatusResponse.h
game-server/utilities/: GUIDUtils.cpp  GUIDUtils.h  JsonHelper.cpp  JsonHelper.h
test-client/: CMakeLists.txt  GameClient.cpp  GameClient.h  main.cpp
test-client/utilities/: Utilities.cpp  Utilities.h
